<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_post_job"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/post_new_job" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_chat"
        android:title="@string/messages" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>