<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_feedback_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_lg"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_default"/>

    <!-- Seeker Section -->
    <LinearLayout
        android:id="@+id/llSeekerChecklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/task_completed_q" android:textColor="@color/black" android:layout_marginTop="@dimen/spacing_sm"/>
        <RadioGroup android:id="@+id/rgTask" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <RadioButton android:id="@+id/rbTaskYes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
            <RadioButton android:id="@+id/rbTaskNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no" android:layout_marginStart="@dimen/spacing_lg"/>
        </RadioGroup>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/damage_issue_q" android:textColor="@color/black" android:layout_marginTop="@dimen/spacing_sm"/>
        <RadioGroup android:id="@+id/rgDamage" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <RadioButton android:id="@+id/rbDamageNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
            <RadioButton android:id="@+id/rbDamageYes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:layout_marginStart="@dimen/spacing_lg"/>
        </RadioGroup>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pay_settled_q" android:textColor="@color/black" android:layout_marginTop="@dimen/spacing_sm"/>
        <RadioGroup android:id="@+id/rgPaymentSettled" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <RadioButton android:id="@+id/rbPaySettledYes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
            <RadioButton android:id="@+id/rbPaySettledNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no" android:layout_marginStart="@dimen/spacing_lg"/>
        </RadioGroup>
    </LinearLayout>

    <!-- Worker Section -->
    <LinearLayout
        android:id="@+id/llWorkerChecklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/pay_received_q"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/rgPaymentReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbPayRecYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rbPayRecNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_lg"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/behavior_fair_q"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/rgBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbBehYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rbBehNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_lg"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" android:layout_marginVertical="@dimen/spacing_default"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_experience" android:textColor="@color/black" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_marginBottom="@dimen/spacing_sm"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:layout_gravity="center_horizontal"
        android:progressTint="#FFD700"
        android:layout_marginBottom="@dimen/spacing_md"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/tell_us_more_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="end" android:layout_marginTop="@dimen/spacing_lg">
        <Button android:id="@+id/btnDismiss" style="@style/Widget.MaterialComponents.Button.TextButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel"/>
        <Button android:id="@+id/btnSubmitCompletion"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:text="@string/submit_and_finish"
            android:textColor="@color/white"
            android:background="@drawable/glass_bg"/>
    </LinearLayout>

</LinearLayout>